# ChangeLog for net-news/raggle
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-news/raggle/ChangeLog,v 1.6 2005/12/27 14:47:30 caleb Exp $

*raggle-0.4.4 (27 Dec 2005)

  27 Dec 2005; Caleb Tennis <caleb@gentoo.org> +raggle-0.4.4.ebuild:
  Version bump

*raggle-0.4.3 (06 Oct 2005)

  06 Oct 2005; Caleb Tennis <caleb@gentoo.org> raggle-0.4.0.ebuild,
  -raggle-0.4.1.ebuild, +raggle-0.4.3.ebuild:
  Version bump, remove old version, remove ruby 1.6 dep

  08 Aug 2005; Michael Kohl <citizen428@gentoo.org> raggle-0.4.1.ebuild:
  Changed USE_RUBY to ruby18 ruby19, see bug #97260.

  07 Aug 2005; Michael Kohl <citizen428@gentoo.org>
  -files/raggle-destdir-gentoo.diff, -raggle-0.3.2.ebuild,
  raggle-0.4.1.ebuild:
  Version bump and cleaning out an older version.

*raggle-0.4.1 (07 Aug 2005)
*raggle-0.4.0 (07 Aug 2005)

  07 Aug 2005; Michael Kohl <citizen428@gentoo.org>
  +files/raggle-destdir-gentoo.diff, +metadata.xml, +raggle-0.3.2.ebuild,
  +raggle-0.4.0.ebuild, +raggle-0.4.1.ebuild:
  Moved from www-client/raggle to net-news/raggle.

  19 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> raggle-0.4.0.ebuild:
  Stable on alpha.

  18 Jul 2005; Michael Kohl <citizen428@gentoo.org> -raggle-0.3.0.ebuild,
  -raggle-0.3.1.ebuild, raggle-0.4.0.ebuild:
  Marked 0.4.0 stable on x86, cleaned out older versions.

  03 May 2005; Michael Kohl <citizen428@gentoo.org> raggle-0.4.0.ebuild:
  Incorporated the changes suggested by Torsten Veller <tove@gentoo.org> in
  bug #86500. Additionally changed USE_RUBY to any, as it's more appropriate
  for this package.

  20 Mar 2005; Michael Kohl <citizen428@gentoo.org> :
  Version bump, closing bug #85987, obsoleting the destdir-patch

  19 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> raggle-0.3.2.ebuild:
  Stable on alpha.

  04 Jan 2005; Michael Kohl <citizen428@gentoo.org> raggle-0.3.2.ebuild:
  Marked stable on x86.
