@@ -1,8 +1,32 @@
-MD5 b822fc401c14d92d0eae814f4b8d9524 ChangeLog 4611
-MD5 470efcfc756989ce5029e59cd82a4daf files/digest-raggle-0.4.0 64
-MD5 ab8a74a8b1575d4609ee1e5abaf0a4ce files/digest-raggle-0.4.3 64
-MD5 5fef8d8d773df88daa5251ca321e2f4f files/digest-raggle-0.4.4 64
-MD5 3eec9f3fe48b51f49dbc1f171a3b026f metadata.xml 157
-MD5 f2984e73d13713a62864d58bb1f9e684 raggle-0.4.0.ebuild 795
+DIST raggle-0.4.0.tar.gz 257056 RMD160 268f9277cdbfb9bfdb1d0756341679082c931ed3 SHA256 47a08984f88b12ec4e56c83c6840dc071f178696e778c97448f71f329004ed68 size 257056
+DIST raggle-0.4.3.tar.gz 273024 size 273024
+DIST raggle-0.4.4.tar.gz 279758 RMD160 43b9353bb192185310eceecdedc00449fbeb0fe3 SHA256 4909e93469a31a2ece889abff3e14a5020bdf2a7ec7cba9371a983adae4391df size 279758
+EBUILD raggle-0.4.0.ebuild 794 RMD160 f41f9f0885ec26bb4e6150547c5f01a5a538ccc4 SHA1 44a60891d0c6ae9f73c9575a7384747f6cf50f05 SHA256 aecc9e86209c8f73bf98970f0a7478a9545bd738040686b12a6efc0a7ae0d3f4 size 794
+MD5 6b95bf574fc171e71dd3189aa5b96030 raggle-0.4.0.ebuild 794
+RMD160 f41f9f0885ec26bb4e6150547c5f01a5a538ccc4 raggle-0.4.0.ebuild 794
+SHA256 aecc9e86209c8f73bf98970f0a7478a9545bd738040686b12a6efc0a7ae0d3f4 raggle-0.4.0.ebuild 794
+EBUILD raggle-0.4.3.ebuild 749 RMD160 5c9929091c68d917526e058b9b6037ad6d462ece SHA1 34b0842a8ecea8fbf0ab8492f0c729b8ac085655 SHA256 19c2ef8971f0558a4b46f6c844b5de0a55cc2082a37d1a0b785054724f8c889d size 749
 MD5 5ae104c768eeed8f976d41958df804a6 raggle-0.4.3.ebuild 749
+RMD160 5c9929091c68d917526e058b9b6037ad6d462ece raggle-0.4.3.ebuild 749
+SHA256 19c2ef8971f0558a4b46f6c844b5de0a55cc2082a37d1a0b785054724f8c889d raggle-0.4.3.ebuild 749
+EBUILD raggle-0.4.4.ebuild 749 RMD160 cbca064808ce96c79d334039e6a4dae092589d83 SHA1 c0a221663e8bf75afde9d265c402f0770a1a2406 SHA256 bcb9d37703408e55803ef0c6cc13440a09488f60b6c9b7c0aa37712ba671dfde size 749
 MD5 80efa3996345c742352e2013cbb823c4 raggle-0.4.4.ebuild 749
+RMD160 cbca064808ce96c79d334039e6a4dae092589d83 raggle-0.4.4.ebuild 749
+SHA256 bcb9d37703408e55803ef0c6cc13440a09488f60b6c9b7c0aa37712ba671dfde raggle-0.4.4.ebuild 749
+MISC ChangeLog 4698 RMD160 1ca5a2d44da03c551878b4ed8c8550c8d6452158 SHA1 97ab9c61289f4c6e97bf18d7a1271d9646a1e37f SHA256 6144fb16db9d2c950788fdc658d65ce528f7753654079207495893b594a224db size 4698
+MD5 af635e256fc8627a2f8b181b22a6c9ca ChangeLog 4698
+RMD160 1ca5a2d44da03c551878b4ed8c8550c8d6452158 ChangeLog 4698
+SHA256 6144fb16db9d2c950788fdc658d65ce528f7753654079207495893b594a224db ChangeLog 4698
+MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c size 157
+MD5 3eec9f3fe48b51f49dbc1f171a3b026f metadata.xml 157
+RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 metadata.xml 157
+SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c metadata.xml 157
+MD5 7d7087a79926e6b9f10fdc1b7c8d847c files/digest-raggle-0.4.0 238
+RMD160 f7e7797928774bb48a266e09543536f09609a1e2 files/digest-raggle-0.4.0 238
+SHA256 cea83654ed738580c345a6d79639efb67317c857ee08e9d2a3abc8854831ddd4 files/digest-raggle-0.4.0 238
+MD5 ab8a74a8b1575d4609ee1e5abaf0a4ce files/digest-raggle-0.4.3 64
+RMD160 c4f584c7b107da596982e0bfc6b2e7eb2ad967c0 files/digest-raggle-0.4.3 64
+SHA256 72202aab01852c84f1b8ee1c71cbdad6c9a6c9ba3d19aa418673bf5d80cfd277 files/digest-raggle-0.4.3 64
+MD5 7dffed66ccf1218d4450f5322d3bd581 files/digest-raggle-0.4.4 238
+RMD160 01f0acb479feacb3f290488b2367ea89f0533a87 files/digest-raggle-0.4.4 238
+SHA256 8812b46add266022b86794c0720a61516b693e70521153232a2abaadb13dbdd5 files/digest-raggle-0.4.4 238
