@@ -1,1 +1,3 @@
 MD5 69a100f9fe24e328e6fe61b543282bb1 raggle-0.4.0.tar.gz 257056
+RMD160 268f9277cdbfb9bfdb1d0756341679082c931ed3 raggle-0.4.0.tar.gz 257056
+SHA256 47a08984f88b12ec4e56c83c6840dc071f178696e778c97448f71f329004ed68 raggle-0.4.0.tar.gz 257056
