@@ -1,1 +1,3 @@
 MD5 d6fd8e1487f53e5cf89e1bf3cf3adbfc raggle-0.4.4.tar.gz 279758
+RMD160 43b9353bb192185310eceecdedc00449fbeb0fe3 raggle-0.4.4.tar.gz 279758
+SHA256 4909e93469a31a2ece889abff3e14a5020bdf2a7ec7cba9371a983adae4391df raggle-0.4.4.tar.gz 279758
