@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-news/raggle/raggle-0.4.0.ebuild,v 1.2 2005/10/06 13:05:36 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-news/raggle/raggle-0.4.0.ebuild,v 1.3 2006/05/02 00:11:20 weeve Exp $
 
 inherit ruby
 
@@ -12,7 +12,7 @@ SRC_URI="http://www.raggle.org/files/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="alpha ~amd64 ~hppa ~mips ~ppc ~sparc x86"
+KEYWORDS="alpha ~amd64 ~hppa ~mips ~ppc sparc x86"
 
 USE_RUBY="any"
 DEPEND="|| ( >=dev-lang/ruby-1.8
